<resources>
    <string name="app_name">SPFsupply</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="manufactures">Manufacturers</string>
    <string name="buyers">Buyers</string>
    <string name="orders">Orders</string>
    <string name="messages">Messages</string>
    <string name="new_manufacturer">New Manufacturer</string>
    <string name="information">Information</string>
    <string name="newproduct">New Product</string>
    <string name="profile">Profile</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="additional">Additional information</string>
    <string name="payment">Payment Method</string>
    <string name="contact_us">Contact Us</string>
    <string name="order_number1234">Order#1234</string>
    <string name="company_name">CompanyName</string>
    <string name="password_reset">Password Reset</string>
    <string name="send_invite">Send Invite</string>
    <string name="slider">Slider</string>
    <string name="information_home">Information</string>

    //Sign Up text
    <string name="company_name_title">COMPANY NAME</string>
    <string name="company_name_edit_text">MyCompany</string>
    <string name="title_email_sign_up">YOUR EMAIL</string>
    <string name="hint_text_edit_email_sign_up">name@domain.com</string>
    <string name="owner_title_sign_up">OWNER/MANAGER NAME</string>
    <string name="edit_text_owner_sign_up">yourusername</string>
    <string name="create_pass_title">CREATE PASSWORD</string>
    <string name="create_pass_hint">Min 8 symbols</string>
    <string name="confirm_pass">CONFIRM PASSWORD</string>
    <string name="confirm_pass_hint">Min 8 symbols</string>
    <string name="proceed_button_text">Proceed</string>

    //Additional informational text
    <string name="company_logo_title">COMPANY LOGO (OPTIONAL)</string>
    <string name="your_phone_hint">YOUR PHONE</string>
    <string name="business_address_title">BUSINESS ADDRESS</string>
    <string name="business_address_edit_text">business address</string>
    <string name="delivery_address_title">DELIVERY ADDRESS</string>
    <string name="delivery_address_edit_text">your address</string>
    <string name="button_text">Proceed</string>
    <string name="phone_number_hint">3206978644</string>

    //Payment method text
    <string name="card_number">Enter your card number</string>
    <string name="exp_month">Exp. month</string>
    <string name="exp_year">Exp. year</string>
    <string name="cvc">Cvc</string>

    <string name="home">Home</string>
    <string name="profile_home">Profile</string>
    <string name="orders_home">Orders</string>
    <string name="check_out_home">Check-out</string>
    <string name="messages_home">Messages</string>
    <string name="orders_number_home">Order#1234</string>
    <string name="orders_number_chat_home">Order#</string>
    <string name="details_home">Details</string>
    <string name="add_payment_method">Payment Method</string>

    //Welcome Back page
    <string name="reset_text"> <u>Reset</u> </string>


    <string name="new_manuf_company_name">COMPANY NAME</string>
    <string name="enter_manuf_company_name">Enter Company Name</string>
    <string name="enter_new_product_title">Enter Product Title</string>
    <string name="enter_new_product_price">12345</string>

    <string name="location_manuf">LOCATION</string>
    <string name="website_manuf">WEBSITE</string>
    <string name="add_amount_manuf">Add amount</string>

    <string name="text_of_location">3290 Hermosillo Place Washington, DC 20521–3290</string>
    <string name="delivery_address_check_out">3290 Honey Creek Dr. New York, NY 10028 </string>
    <string name="reset_password_text">To reset your password, enter the email address you use to sign in to SPFsupply</string>

    <string name="invoice_order_home_text"><u> Invoice order#1234 </u> </string>


    //New Manufacturer text
    <string name="merchant_id_text">ADDITIONAL COSTS</string>
    <string name="add_merchant_id">Add Merchant ID</string>
    <string name="tax_amount">TAX AMOUNT</string>
    <string name="shipping_cost">SHIPPING COST</string>
    <string name="fee">FEE</string>
    <string name="location">Enter location</string>
    <string name="website">Add company website</string>
    <string name="amount">Add amount</string>


    <string name="action_settings">Settings</string>
    <string name="action_mail_buyers">Mail</string>
    <string name="action_new_manufacturer">Done</string>
    <string name="action_details">Add to Cart</string>
    <string name="action_send_invite"><u> Invite with SMS </u> </string>
    <string name="order_number_text_underline"> <u> Document name </u> </string>

    <string name="buyer_information">Buyer Information</string>
    <string name="buyer_permissions">Permissions</string>
    <string name="welcome_to_spf_supply">Welcome to SPFsupply</string>

    <string name="button_sign_in">Sign In</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="contact_button">Contact</string>
    <string name="sign_up_button">Sign Up</string>

    <string name="loren_ipsum">Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do ei. </string>

    <string name="google_maps_api_key">AIzaSyAPE7hm_slNLDgf8ACeno10p_ts4UB6sR8</string>

    // In chat.
    <string name="write">Write</string>
    <string name="mycompany">MyCompany</string>
    <string name="todo">TODO</string>
    <string name="change_password">Change password</string>
    <string name="your_email">YOUR EMAIL</string>
    <string name="owner_manager_name">OWNER/MANAGER NAME</string>
    <string name="name_domain_com">name@domain.com</string>
    <string name="your_phone">YOUR PHONE</string>
    <string name="business_address">BUSINESS ADDRESS</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="account_ending_in_3423">Account ending in 3423</string>
    <string name="add_another_payment_method">Add another payment method</string>
    <string name="_1_320_697_8644">+1 320 -697-8644</string>
    <string name="peter_preston">Peter Preston</string>

    // String for invite.
    <string name="invite_text">
        Hello from SPFsupply! \n
       \n We\'d like to invite you to join our growing network of insulation contractors who desire a better
        overall buying experience. Gain access to exclusive pricing on parts and materials directly
        from your mobile device. Join us today by searching SPFsupply in your app store. Sign-up is free!
        \n
        \n
        Support
        978.798.0379
        contact@spfsupply.com
    </string>

</resources>
