<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maximus09.spfsupply.SignUpActivity">

    <include
        android:id="@+id/include"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/text_company_name"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/latoregular"
        android:text="@string/company_name_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        tools:ignore="UnusedAttribute"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="24dp" />

    <EditText
        android:id="@+id/edit_text_company_name_signup"
        android:layout_width="200dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/latoregular"
        android:hint="@string/company_name_edit_text"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22"
        tools:ignore="UnusedAttribute"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="24dp" />


    <TextView
        android:id="@+id/title_email_signup"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/latoregular"
        android:text="@string/title_email_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23000002"
        tools:ignore="UnusedAttribute"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="24dp" />

    <EditText
        android:id="@+id/edit_text_mail_sign_up"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/latoregular"
        android:hint="@string/hint_text_edit_email_sign_up"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrayLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        tools:ignore="UnusedAttribute"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/title_owner_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/latoregular"
        android:text="@string/owner_title_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        tools:ignore="UnusedAttribute"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="24dp" />

    <EditText
        android:id="@+id/edit_text_owner_signup"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/latoregular"
        android:hint="@string/edit_text_owner_sign_up"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrayLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="UnusedAttribute"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/title_password_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/latoregular"
        android:text="@string/create_pass_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56"
        tools:ignore="UnusedAttribute"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="24dp" />

    <EditText
        android:id="@+id/edit_text_pass_signup"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/latoregular"
        android:hint="@string/create_pass_hint"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrayLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68"
        tools:ignore="UnusedAttribute"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/title_confirm_pass_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/latoregular"
        android:text="@string/confirm_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72"
        tools:ignore="UnusedAttribute"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="24dp" />

    <EditText
        android:id="@+id/edit_text_confirm_pass_signup"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/latoregular"
        android:hint="@string/confirm_pass_hint"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrayLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83"
        tools:ignore="UnusedAttribute"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="24dp" />

    <Button
        android:id="@+id/button_proceed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/proceed_button_text"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_background"
        android:textSize="18sp"
        android:fontFamily="@font/latoregular"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />


</android.support.constraint.ConstraintLayout>
